// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays open nav or drawer 1`] = `
<div>
  Title
  <Main
    isMasked={false}
  >
    <Routes />
  </Main>
  <button
    onClick={[Function]}
  />
  <Navigation />
  <ToastContainer />
</div>
`;

exports[`renders with renderErrors 1`] = `
<HeadProvider>
  <StoreTitle />
  <Main
    isMasked={true}
  />
  <Mask
    isActive={true}
  />
  <ToastContainer />
</HeadProvider>
`;

exports[`renders with unhandledErrors 1`] = `
<HeadProvider>
  <StoreTitle />
  <Main
    isMasked={false}
  >
    <Routes />
  </Main>
  <Mask
    dismiss={[Function]}
    isActive={false}
  />
  <Navigation />
  <ToastContainer />
</HeadProvider>
`;
